[package]
name = "quanta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.9.0"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"
rand = "*"

[[bench]]
name = "matrix_bench"
harness = false